updated version of tests config, plots and pvc example

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,7 @@
 [nosetests]
-verbosity=3
+verbosity=2
 detailed-errors=1
-with-spec=1
-spec-color=1
+with-specplugin=1
 with-cov=1
 cov-report=term-missing
 
