--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [nosetests]
 verbosity=2
 detailed-errors=1
-with-specplugin=1
+with-spec=1
 with-cov=1
+spec-color=1
 cov-report=term-missing
-
+with-xtraceback=1
