ignore 'in prep'

--- a/examples/in preparation/.gitignore
+++ b/examples/in preparation/.gitignore
@@ -1,2 +1,12 @@
 /.ipynb_checkpoints/
 /__pycache__/
+/MEP/
+/MEP all r/
+/SS init/
+/MEP Final Model/
+/MEP same X/
+/MEP Oxygen Rates/
+/MEP Final Model FeOOH example/
+/MEP Final Model D experiment/
+/MEP same X all r/
+/Sediment Competiotion/
