feat: add vectorized ODE solver for 6-60x performance improvement
The reaction integration previously solved N separate ODEs (one per spatial
point) sequentially. This change solves a single large ODE of size N*S,
eliminating the Python loop and enabling NumPy SIMD vectorization.

- Add create_vectorized_ode_function() and ode_integrate_vectorized() to desolver.py
- Add reactions_integrate_vectorized() method to lab.py
- Update Column.integrate_one_timestep() to use vectorized solver by default
- Add 'scipy_sequential' ode_method for backward compatibility
- Add ODESolverError exception with proper error handling
- Use LSODA solver (auto-detects stiffness) instead of BDF for better performance
- Fix reconstruct_rates() to handle single rate case
- Add comprehensive tests for vectorized solver
- Add benchmark script for performance comparisons

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "porousmedialab"
-version = "1.5.1"
+version = "2.0.0"
 description = "Toolbox for batch and 1D reactive transport modeling in porous media aimed on easiness of use for the user without computational background"
 authors = ["Igor Markelov <is.markelov@gmail.com>"]
 license = "MIT"
@@ -36,6 +36,8 @@ scikit-learn = ">=1.0"
 cython = "^3.0"
 pytest = "^7.0"
 pytest-cov = "^4.0"
+jupyter = "^1.1.1"
+nbconvert = "^7.17.0"
 
 [build-system]
 requires = ["poetry-core"]
